--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -64,9 +64,7 @@ a {
 		color: #006699;
 		text-decoration: none;
 }
-a:hover { 
-		color: #66CC00;
-}
+
 h1 {	
 		font-weight: 400;
 		font-size: 1.75em; /* 28px */
@@ -115,6 +113,9 @@ div#navigation ul, div#navigation a {
 		padding:0;
 		margin: 0;
 		list-style:none;
+}
+div#navigation a:hover {
+		color: #66CC00;
 }
 div#navigation li{
 	width:auto;
