--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -120,7 +120,7 @@ div#navigation a:hover {
 div#navigation li{
 	width:auto;
 	display:inline-block;
-	padding:0 0.8em;
+	padding:0 5%;
 }
 #content {
 		width: 100%;
