--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -234,7 +234,7 @@ video {
 @media only screen and (max-width: 50em) { /* 800px */
 		body { font-size:100%;}
 }   
-@media only screen and (min-width: 64.00em) { /* 1100px */
+@media only screen and (min-width: 64.00em) { /* ????px */
 		body { font-size:150%;} 
 }  	       
 
