--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -55,6 +55,7 @@ body {
 		font-family: 'Ubuntu', sans-serif;
 		font-weight: 300; 
 		background-color: #FFFFFF;
+		font-size: 1em;	
 }
 p {
 		font-size: 1em;	
