--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -72,7 +72,7 @@ h1 {
 		font-weight: 400;
 		font-size: 1.75em; /* 28px */
 		line-height: 1.1428; /* 32px */
-		margin-top: 0.8571em; /* 24px */
+		margin-top: 0.9em; 
 }
 h2 {
 		font-weight: 400;
