--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -213,12 +213,13 @@ video {
 }
 #footer {
 		background-color: #424242;
-		color: #E6E6E6;
+		color: #FF6600;
 		position:relative;
    		bottom:0;
    		width:100%;
    		height:100%;
    		text-align: center;
+   		padding-top: 0.2em;
 }
 @media only screen and (min-width: 68.75em) { /* ????px */
 		body { font-size:115%;} 
