--- a/_layouts/default_new.html
+++ b/_layouts/default_new.html
@@ -24,7 +24,7 @@
 </div><!--wrapper-->
 
 <div id="footer">
-		<p><a class="footer" href="http://creativecommons.org/licenses/by-sa/3.0/">CC By-Sa</a>. <a class="footer" href="http://font.ubuntu.com/">Ubuntu Font Family</a>. Proudly generated using <a class="footer" href="http://jekyllrb.com/">Jekyll</a>. Currently coming to you from <span style="color:#0B610B">Dublin, Ireland</span>.</p>
+		<p><a class="footer" href="http://creativecommons.org/licenses/by-sa/3.0/">CC By-Sa</a>. <a class="footer" href="http://font.ubuntu.com/">Ubuntu Font Family</a>. Proudly generated using <a class="footer" href="http://jekyllrb.com/">Jekyll</a>. Currently coming to you from Dublin, Ireland.</p>
 </div> <!--footer-->
 
 <script type="text/javascript">
