--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -211,7 +211,7 @@ video {
 	width: 100%;
 	height: 100%;
 }
-#footer {
+div#footer {
 		background-color: #424242;
 		color: #FF6600;
 		position:relative;
@@ -220,7 +220,6 @@ video {
    		height:100%;
    		text-align: center;
    		padding: 0.2em 0.1em;
-   		line-height:1.0em;
 }
 @media only screen and (min-width: 68.75em) { /* ????px */
 		body { font-size:115%;} 
