--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -213,13 +213,16 @@ video {
 }
 div#footer {
 		background-color: #424242;
-		color: #FF6600;
 		position:relative;
    		bottom:0;
    		width:100%;
    		height:100%;
    		text-align: center;
-   		padding: 0.2em 0.1em;
+   		padding: 0.5em 0.5em;
+}
+div#footer p {
+		line-height: 1em;
+		color: #FF6600;
 }
 @media only screen and (min-width: 68.75em) { /* ????px */
 		body { font-size:115%;} 
