--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -220,7 +220,8 @@ div#footer {
    		text-align: center;
 }
 div#footer p {
-		line-height: 1em;
+		vertical-align: center; 
+		line-height: 1.3em;
 		color: #FF6600;
 		padding: 0.5em 0.3em;
 }
