--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -222,7 +222,7 @@ div#footer {
 div#footer p {
 		line-height: 1.3em;
 		color: #FF6600;
-		padding: 0.5em 0.3em 0 0.3em;
+		padding: 0;
 }
 @media only screen and (min-width: 68.75em) { /* ????px */
 		body { font-size:115%;} 
