--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -212,7 +212,7 @@ video {
 	height: 100%;
 }
 div#footer {
-		background-color: #424242;
+		background-color: #D8D8D8;
 		position:relative;
    		bottom:0;
    		width:100%;
