--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -212,6 +212,7 @@ video {
 	height: 100%;
 }
 div#footer {
+		border-top: 5px solid black;
 		background-color: #D8D8D8;
 		position:relative;
    		bottom:0;
