--- a/_layouts/default_new.html
+++ b/_layouts/default_new.html
@@ -13,7 +13,7 @@
 			<li><a href="http://timmschoof.com">About</a></li>
 			<li><a href="/contact/">Contact</a></li>
 			<li><a href="/archives/">Archives</a></li>
-			<li><a href="http://feeds.feedburner.com/timmschoof">Subscribe</a></li>
+			<li><a href="http://feeds.feedburner.com/timmschoof">RSS</a></li>
 		</ul>
 	</div> <!--navigation-->
 	
