--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -72,7 +72,7 @@ h1 {
 		font-weight: 400;
 		font-size: 1.75em; /* 28px */
 		line-height: 1.1428; /* 32px */
-		margin-top: 1.8em; 
+		margin-top: 2.0em; 
 }
 h2 {
 		font-weight: 400;
@@ -130,6 +130,8 @@ div#navigation li{
 }
 .title {
 		text-align: center;
+}
+h1.title {
 }
 a.title {
 		color: black;
