--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -66,7 +66,7 @@ a {
 		text-decoration: none;
 }
 a:hover {
-		color: #66CC00;
+		color: #FF6600;
 }
 h1 {	
 		font-weight: 400;
@@ -80,6 +80,11 @@ h2 {
 		line-height: 1.16; /* 28px */
 		margin-top: 1.4em; 
 }
+blockquote {
+	margin: 1em 3em;
+	color: #999;
+	border-left: 2px solid #FF6600;
+	padding-left: 1em; }
 #header { 
 		margin: 2em auto 0.8em auto;
 		text-align: center;
