--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -82,8 +82,8 @@ h2 {
 }
 blockquote {
 	margin: 1em 3em;
-	color: #999;
-	border-left: 2px solid #FF6600;
+	color: #585858;
+	border-left: 0.25em solid #FF6600;
 	padding-left: 1em; }
 #header { 
 		margin: 2em auto 0.8em auto;
