--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -81,23 +81,24 @@ h2 {
 		margin-top: 1.4em; 
 }
 blockquote {
-	margin: 1em 1.5em 1em 2em;
-	color: #848484;
-	border-left: 0.22em solid #FF6600;
-	padding-left: 1em; 
+		margin: 1em 1.5em 1em 2em;
+		color: #848484;
+		border-left: 0.22em solid #FF6600;
+		padding-left: 1em; 
 }
 code {
-	font-family:"Courier New", Courier, monospace;
-	font-size: smaller;
+		font-family:"Courier New", Courier, monospace;
+		font-size: smaller;
 }	
 ol {
-	list-style-type: decimal;
+		list-style-type: decimal;
 }
 ul {
-	list-style-type: disc;
-	list-style-position: outside;
+		list-style-type: disc;
+		margin-left: 1em; 
 }
-li {
+ul ul {
+		list-style-type: circle;
 }
 #header { 
 		margin: 2em auto 0.8em auto;
