--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -89,11 +89,13 @@ blockquote {
 code {
 		font-family:"Courier New", Courier, monospace;
 		font-size: smaller;
-}	
+}
+
+
 ol {
 		list-style-type: decimal;
 }
-p.ul {
+ul {
 		list-style-type: disc;
 		margin-left: 1.5em;
 		margin-bottom: 0em;
@@ -102,6 +104,10 @@ p.ul {
 ul ul {
 		list-style-type: circle;
 }
+ul li { padding: 0; margin: 0; }
+ul a { padding: 5px; display: block; }
+
+
 #header { 
 		margin: 2em auto 0.8em auto;
 		text-align: center;
