--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -95,7 +95,7 @@ code {
 ol {
 		list-style-type: decimal;
 }
-ul {
+ul p {
 		list-style-type: disc;
 		margin-left: 1.5em;
 		margin-bottom: 0em;
@@ -105,7 +105,6 @@ ul ul {
 		list-style-type: circle;
 }
 ul li { padding: 0; margin: 0; }
-ul a { padding: 5px; display: block; }
 
 
 #header { 
