--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -95,11 +95,12 @@ code {
 ol {
 		list-style-type: decimal;
 }
-ul p {
+ul {
 		list-style-type: disc;
 		margin-left: 1.5em;
-		margin-bottom: 0em;
-		margin-top: 0em;
+}
+ul p {
+		margin-bottom: 0.5em;
 }
 ul ul {
 		list-style-type: circle;
