--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -92,6 +92,10 @@ code {
 }
 ol {
 		list-style-type: decimal;
+		margin-left: 1.8em;
+}
+ol p {
+		margin-bottom: 0.4em;
 }
 ul {
 		list-style-type: disc;
