--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -99,11 +99,12 @@ ol p {
 }
 ul {
 		list-style-type: disc;
-		color: green;
+		color: #FF6600;
 		margin-left: 1.8em;
 }
 ul p {
 		margin-bottom: 0.4em;
+		color: black;
 }
 ul ul {
 		list-style-type: circle;
