--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -89,7 +89,7 @@ blockquote {
 code {
 		font-family:"Courier New", Courier, monospace;
 		margin: 1em 1.5em 1em 2em;
-		padding: 0.1 0.2525em;
+		padding: 0.3em 0.3em;
 		background-color: #F2F2F2;
 }
 ol {
