--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -258,14 +258,14 @@ video {
 }
 div#footer {
 		position:relative;
+		margin: 5em auto;
    		bottom:0;
    		width:50%;
-   		height:5em;
+   		height:100%;
    		text-align: center;
 }
 div#footer p {
-		line-height: 1.3em;
-		padding: 0.5em 0.3em;
+		font-size: 0.8em;
 		margin: 0;
 }
 @media only screen and (min-width: 68.75em) { /* 1100px */
