--- a/_layouts/default_new.html
+++ b/_layouts/default_new.html
@@ -24,7 +24,7 @@
 </div><!--wrapper-->
 
 <div id="footer">
-		<p><a href="http://creativecommons.org/licenses/by-sa/3.0/">CC By-Sa</a>. <a href="http://font.ubuntu.com/">Ubuntu Font Family</a>. Proudly generated using <a href="http://jekyllrb.com/">Jekyll</a>. Currently coming to you from Dublin, Ireland.</p>
+		<p><a href="http://creativecommons.org/licenses/by-sa/3.0/">CC By-Sa</a>. <a href="http://font.ubuntu.com/">Ubuntu Font Family</a>. Proudly generated using <a href="http://jekyllrb.com/">Jekyll</a>.</p><p>Currently coming to you from Dublin, Ireland.</p>
 </div> <!--footer-->
 
 </body>
