--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -266,7 +266,8 @@ div#footer {
 }
 div#footer p {
 		font-size: 0.8em;
-		margin: 0;
+		line-height: 2em;
+		margin: 2em;
 }
 @media only screen and (min-width: 68.75em) { /* 1100px */
 		body { font-size:115%;} 
