--- a/_layouts/default_new.html
+++ b/_layouts/default_new.html
@@ -17,7 +17,7 @@
 		</ul>
 	</div> <!--navigation-->
 	
-	<div id="content">
+	<div id="content-wrapper">
 			{{ content }}
 	</div> <!--content-->
 	
