--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -219,7 +219,7 @@ video {
 .pagination {
 		
 }
-#header { 
+div#header { 
 		margin: 2em auto 0.8em auto;
 		text-align: center;
 		max-width: 100%;
@@ -238,14 +238,14 @@ div#header a {
 		text-decoration: none;
 		color: white;
 }
-#wrapper {
+div#wrapper {
 		margin: 0 auto 2em auto; 
 		max-width: 870px;
 		font-size: 100%;
         line-height: 1.6875;
         padding: 0 5%;
 }
-#navigation {
+div#navigation {
 		width: 100%;
 }
 div#navigation ul, div#navigation a {
