--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -216,8 +216,7 @@ video {
 	width: 100%;
 	height: 100%;
 }
-.pagination {
-		
+.pagination {	
 }
 div#header { 
 		margin: 2em auto 0.8em auto;
@@ -263,6 +262,8 @@ div#navigation li{
 	width:auto;
 	display:inline-block;
 	padding:0 5%;
+}
+div#pagination {
 }
 div#content-wrapper {
 		width: 100%;
