--- a/_layouts/default_new.html
+++ b/_layouts/default_new.html
@@ -20,7 +20,22 @@
 	<div id="content-wrapper">
 			{{ content }}
 	</div> <!--content-->
-	
+
+<div id="pagination">
+    {% if paginator.previous_page %}
+      {% if paginator.previous_page == 1 %}
+      <a href="/" title="Previous Page">&laquo; Previous</a>
+      {% else %}
+      <a href="/page{{ paginator.previous_page }}/" title="Previous Page">&laquo; Previous</a>
+      {% endif %}
+    {% endif %}
+    
+    {% if paginator.next_page %} 
+    <a href="/page{{ paginator.next_page }}/" title="Next Page">Next &raquo;</a>
+    {% endif %} 
+</div>
+
+
 </div><!--wrapper-->
 
 <div id="footer">
