--- a/_layouts/default_new.html
+++ b/_layouts/default_new.html
@@ -8,14 +8,14 @@
 
 <div id="wrapper">
   
-	<div id="navigation">
+<!--	<div id="navigation">
 		<ul>
 			<li><a href="http://timmschoof.com">About</a></li>
 			<li><a href="/contact/">Contact</a></li>
 			<li><a href="/archives/">Archives</a></li>
 			<li><a href="http://feeds.feedburner.com/timmschoof">RSS</a></li>
 		</ul>
-	</div> <!--navigation-->
+	</div> <!--navigation--> -->
 	
 	<div id="content-wrapper">
 			{{ content }}
