--- a/_layouts/default_new.html
+++ b/_layouts/default_new.html
@@ -4,18 +4,18 @@
 
 <div id="header">
 		<h1><a title="Home" href="/">blog.&#8203;timmschoof&#8203;.com</a></h1>
-</div> <!--header-->
+</div> 
 
 <div id="wrapper">
 	
 	<div id="content-wrapper">
 			{{ content }}
-	</div> <!--content-->
-
-</div><!--wrapper-->
+	</div> 
+	
+</div>
 
 <div id="footer">
 		<p><a href="http://creativecommons.org/licenses/by-sa/3.0/">CC By-Sa</a>. <a href="http://font.ubuntu.com/">Ubuntu Font Family</a>. Proudly generated using <a href="http://jekyllrb.com/">Jekyll</a>.</p><p>Currently coming to you from Dublin, Ireland.</p>
-</div> <!--footer-->
+</div>
 
 </body>
