breaking point header

--- a/_layouts/default_new.html
+++ b/_layouts/default_new.html
@@ -3,7 +3,7 @@
 <body>
 
 <div id="header">
-		<h1><a title="Home" href="/">blog.&#8203;timmschoof&#8203;.com</a></h1>
+		<h1><a title="Home" href="/">blog.&#8203;timmschoof.com</a></h1>
 </div> 
 
 <div id="wrapper">
