--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -245,7 +245,8 @@ div#wrapper {
  
 div#footer {
 		position:relative;
-		margin: 6em 2em 4em 2em;
+		margin: 6em 0 4em 0;
+		padding: 0 3em;
    		bottom:0;
    		width:100%;
    		height:100%;
