--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -250,7 +250,7 @@ div#footer {
 		margin: 6em 0 4em 0;
 		padding: 0 3em;
    		bottom:0;
-   		width:100%;
+   		max-width:100%;
    		height:100%;
    		text-align: center;
    		background-color: grey; 
