--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -259,7 +259,7 @@ div#footer p {
 		font-size: 0.9em;
 		line-height: 1.3em;
 		margin: 1.1em 0;
-		padding: 0 0;
+		padding: 1.1em 0 0 0;
 }
 @media only screen and (min-width: 68.75em) { /* 1100px */
 		body { font-size:115%;} 
