--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -248,7 +248,7 @@ div#wrapper {
 div#footer {
 		position:relative;
 		margin: 6em 0 4em 0;
-		padding: 0 3em;
+		padding: 1.1em 3em;
    		bottom:0;
    		max-width:100%;
    		height:100%;
@@ -259,7 +259,7 @@ div#footer p {
 		font-size: 0.9em;
 		line-height: 1.3em;
 		margin: 0 0;
-		padding: 1.1em 0;
+		padding: 1.1em 0 0 0;
 }
 @media only screen and (min-width: 68.75em) { /* 1100px */
 		body { font-size:115%;} 
