--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -248,7 +248,7 @@ div#wrapper {
 div#footer {
 		position:relative;
 		margin: 6em 0 4em 0;
-		padding: 1.1em 3em;
+		padding: -1.1em 3em 1.1em 3em;
    		bottom:0;
    		max-width:100%;
    		height:100%;
