--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -248,7 +248,7 @@ div#wrapper {
 div#footer {
 		position:relative;
 		margin: 6em 0 4em 0;
-		padding: 0 0 1.1em 0;
+		padding: 0 1em 1.1em 1em;
    		bottom:0;
    		max-width:100%;
    		height:100%;
