--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -263,7 +263,8 @@ div#footer p {
 }
 div#footer a {
 		color: black;
-		text-decoration: underline 1px solid;
+}
+div#footer a:hover {
 }
 @media only screen and (min-width: 68.75em) { /* 1100px */
 		body { font-size:115%;} 
