--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -267,6 +267,7 @@ div#footer a {
 }
 div#footer a:hover {
 		border-bottom: 1px dotted;
+		-webkit-transition: 0.9s linear;
 }
 @media only screen and (min-width: 68.75em) { /* 1100px */
 		body { font-size:115%;} 
