--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -257,7 +257,7 @@ div#footer {
 }
 div#footer p {
 		font-size: 0.9em;
-		line-height: 1.3em;
+		line-height: 1.5em;
 		margin: 0;
 		padding: 1.1em 0 0 0;
 }
@@ -267,7 +267,11 @@ div#footer a {
 }
 div#footer a:hover {
 		border-bottom: 1px dotted;
-		-webkit-transition: 0.9s linear;
+		-webkit-transition: 3s linear;
+-moz-transition: 3s linear;
+-o-transition: 3s linear;
+-ms-transition: 3s linear;
+transition: 3s linear;
 }
 @media only screen and (min-width: 68.75em) { /* 1100px */
 		body { font-size:115%;} 
