--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -266,12 +266,7 @@ div#footer a {
 		border-bottom: 1px solid;
 }
 div#footer a:hover {
-		opacity: 0.9;
-		-webkit-transition: 3s linear;
--moz-transition: 3s linear;
--o-transition: 3s linear;
--ms-transition: 3s linear;
-transition: 3s linear;
+		opacity: 0.5;  -webkit-transition: 0.09s linear; -moz-transition: 0.09s linear; }
 }
 @media only screen and (min-width: 68.75em) { /* 1100px */
 		body { font-size:115%;} 
