--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -80,6 +80,7 @@ a {
 }
 a:hover {
 		color: #FF6600;
+		-webkit-transition: 0.09s linear; -moz-transition: 0.09s linear;
 }
 h1 {	
 		font-weight: 400;
