--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -79,7 +79,7 @@ a {
 		text-decoration: none;
 }
 a:hover {
-/*		color: #FF6600; */
+		color: #FF6600; 
 		opacity: 0.5; -webkit-transition: 0.09s linear; -moz-transition: 0.09s linear;
 }
 h1 {	
