--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -64,7 +64,7 @@ p {
 div#post-content p {
 		color: rgb(40,40,40);
 }
-div#post-centent a:hover {
+div#post-content a:hover {
 		color: #FF6600; 
 		opacity: 0.5; -webkit-transition: 0.09s linear; -moz-transition: 0.09s linear;
 }
