--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -99,7 +99,8 @@ h2 {
 }
 blockquote, q {
 		margin: 1em 1.5em 1em 2em;
-		color: #585858;
+		/* color: #585858; */
+		color: red;
 		border-left: 0.22em solid #FF6600;
 		padding-left: 1em; 
 }
