--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -244,7 +244,7 @@ p.pic {
 }
 div#footer {
 		position:relative;
-		margin: 6em 0 4em 0;
+		margin: 6em 0 0 0;
 		padding: 0 1em 1.1em 1em;
    		bottom:0;
    		max-width:100%;
@@ -268,7 +268,6 @@ div#footer a:hover {
 @media only screen and (min-width: 68.75em) { /* 1100px */
 		body { font-size:115%;} 
 }  	       
-
 @media only screen and (max-width: 31.25em) { /* 500px */
 		body { font-size:90%;}
 		div#header { 
