--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -250,7 +250,7 @@ div#footer {
    		max-width:100%;
    		height:100%;
    		text-align: center;
-   		background-color: #CECECE; 
+   		background-color: #DDDDDD; 
 }
 div#footer p {
 		font-size: 0.9em;
