--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -72,11 +72,12 @@ em strong {
 		font-style: italic;
 }
 a {
-		color: #3366CC;
+		color: #FF6600;
+		/* color: #3366CC; blue */
 		text-decoration: none;
 }
 a:hover {
-		color: #FF6600; 
+		opacity: 0.5;  -webkit-transition: 0.09s linear; -moz-transition: 0.09s linear; 
 }
 h1 {	
 		font-weight: 400;
