--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -77,6 +77,7 @@ a {
 		text-decoration: none;
 }
 a:hover {
+		color: black;
 		opacity: 0.5;  -webkit-transition: 0.09s linear; -moz-transition: 0.09s linear; 
 }
 h1 {	
