--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -78,7 +78,10 @@ a {
 }
 a:hover {
 		color: black;
-		opacity: 0.5;  -webkit-transition: 0.09s linear; -moz-transition: 0.09s linear; 
+		opacity: 0.7;  -webkit-transition: 0.09s linear; -moz-transition: 0.09s linear; 
+}
+a:visited {
+		color: #3366CC;
 }
 h1 {	
 		font-weight: 400;
@@ -165,6 +168,7 @@ a.title {
 }
 a:hover.title {
 		color: #FF6600;
+		opacity: 1.0;
 }
 .post-meta {
 		text-align: center;
