--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -83,6 +83,10 @@ a:hover {
 a:visited {
 		color: #3366CC;
 }
+a:visited:hover {
+		color: black;
+		opacity: 0.9;  -webkit-transition: 0.09s linear; -moz-transition: 0.09s linear; 
+}
 h1 {	
 		font-weight: 400;
 		font-size: 1.75em; /* 28px */
