--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -77,15 +77,15 @@ a {
 		text-decoration: none;
 }
 a:hover {
-		color: black;
-		opacity: 0.9;  -webkit-transition: 0.09s linear; -moz-transition: 0.09s linear; 
+		color: grey;
+		opacity: 0.95;  -webkit-transition: 0.09s linear; -moz-transition: 0.09s linear; 
 }
 a:visited {
 		color: #3366CC;
 }
 a:visited:hover {
-		color: black;
-		opacity: 0.9;  -webkit-transition: 0.09s linear; -moz-transition: 0.09s linear; 
+		color: grey;
+		opacity: 0.95;  -webkit-transition: 0.09s linear; -moz-transition: 0.09s linear; 
 }
 h1 {	
 		font-weight: 400;
