--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -77,7 +77,7 @@ a {
 		text-decoration: none;
 }
 a:hover {
-		color: grey;
+		color: #3366CC;
 		opacity: 0.95;  -webkit-transition: 0.09s linear; -moz-transition: 0.09s linear; 
 }
 a:visited {
