--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -30,6 +30,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
+	background-color: #F5F5F5;
 }
 ol, ul {
 	list-style: none;
