--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -54,7 +54,7 @@ table {
 body {
 		font-family: 'Ubuntu', sans-serif;
 		font-weight: 300; 
-		background-color: #F7F7F7;
+		background-color: #FAFAFA;
 		font-size: 1em;	
 }
 p {
