--- a/_layouts/default_new.html
+++ b/_layouts/default_new.html
@@ -15,7 +15,7 @@
 </div>
 
 <div id="footer">
-		<p><a href="http://creativecommons.org/licenses/by-sa/3.0/">CC By-Sa</a>. <a href="http://font.ubuntu.com/">Ubuntu Font Family</a>. Proudly generated using <a href="http://jekyllrb.com/">Jekyll</a>.</p><p>Currently coming to you from Dublin, Ireland.</p>
+		<p>Footer</p>
 </div>
 
 </body>
