--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -94,8 +94,8 @@ h1 {
 }
 h2 {
 		font-weight: 400;
-		font-size: 1.5em; /* 24px */
-		line-height: 1.16; /* 28px */
+		font-size: 1.4em; 
+		line-height: 1.12; 
 		margin-top: 1.4em; 
 }
 blockquote, q {
