--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -290,9 +290,9 @@ div#footer a:hover {
 		padding: 0.5em 0.4em; 
 }
 		div#header h1 {
-		font-size: 2.0em;
+		/*font-size: 2.2em;
 		line-height:1.0em;
-		margin: 0.5em 0;
+		margin: 0.5em 0;*/
 }
 		div#navigation ul, div#navigation a {
 		font-size: 1.0em;
