--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -136,7 +136,7 @@ video {
 		height: auto;
 }
 div#header { 
-		margin: 2em auto -0.7em auto;
+		margin: 2em auto 0.5em auto;
 		text-align: center;
 		max-width: 100%;
 		padding: 1.0em 0.8em;
@@ -159,6 +159,26 @@ div#header a:hover {
 		color: white;
 		opacity: 1.0;
 }
+div#navigation {
+		width: 100%;
+}
+div#navigation ul, div#navigation a {
+		font-size: 1.2em;
+		color: #FF6600;
+		text-align:center;
+		padding:0;
+		margin: 0;
+		list-style:none;
+}
+div#navigation a:hover {
+		color: #66CC00;
+}
+div#navigation li{
+	width:auto;
+	display:inline-block;
+	padding:0 5%;
+} 
+
 div#wrapper {
 		margin: 0 auto 2em auto; 
 		max-width: 870px;
