--- a/_layouts/default_new.html
+++ b/_layouts/default_new.html
@@ -5,7 +5,9 @@
 <div id="header">
 		<h1><a title="Home" href="/">blog.&#8203;timmschoof.com</a></h1>
 </div> 
-
+<ul>
+			<li><a href="http://timmschoof.com">About</a></li>
+</ul>
 <div id="wrapper">
 	
 	<div id="content-wrapper">
