--- a/_layouts/default_new.html
+++ b/_layouts/default_new.html
@@ -5,9 +5,11 @@
 <div id="header">
 		<h1><a title="Home" href="/">blog.&#8203;timmschoof.com</a></h1>
 </div> 
+<div id="navigation"
 <ul>
 			<li><a href="http://timmschoof.com">About</a></li>
 </ul>
+</div>
 <div id="wrapper">
 	
 	<div id="content-wrapper">
