--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -162,12 +162,11 @@ div#header a:hover {
 div#navigation {
 		width: auto;
 		text-align:center;
+		padding: 1em 0 0 0;
 }
 div#navigation ul, div#navigation a {
 		font-size: 1.2em;
 		color: #FF6600;
-		text-align:center;
-		padding:0;
 		margin: 0;
 		list-style:none;
 }
