--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -314,9 +314,9 @@ div#footer a:hover {
 		line-height:1.0em;
 		margin: 0.5em 0;
 }
-		div#navigation ul, div#navigation a {
+		/* div#navigation ul, div#navigation a {
 		font-size: 1.0em;
-}
+} */
 }	       
 
 @media only screen and (min-width: 68.75em) { /* 1100px */
