--- a/_layouts/default_new.html
+++ b/_layouts/default_new.html
@@ -8,6 +8,7 @@
 <div id="navigation"
 <ul>
 			<li><a href="http://timmschoof.com">About</a></li>
+			<li><a href="http://feeds.feedburner.com/timmschoof">RSS</a></li>
 </ul>
 </div>
 <div id="wrapper">
