--- a/_layouts/default_new.html
+++ b/_layouts/default_new.html
@@ -7,7 +7,7 @@
 </div> 
 <div id="navigation"
 <ul>
-			<li><a href="http://timmschoof.com">About</a></li>
+			<li><a href="http://timmschoof.com">Personal Page</a></li>
 			<li><a href="http://feeds.feedburner.com/timmschoof">Subscribe</a></li>
 </ul>
 </div>
