--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -77,7 +77,8 @@ a {
 }
 a:hover {
 		color: #3366CC;
-		opacity: 0.93;  -webkit-transition: 0.13s linear; -moz-transition: 0.13s linear; 
+		/*opacity: 0.93;  -webkit-transition: 0.13s linear; -moz-transition: 0.13s linear; */
+		 opacity: 0.5;  -webkit-transition: 0.09s linear; -moz-transition: 0.09s linear;
 }
 /* a:visited {
 		color: #3366CC;
