--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -76,7 +76,7 @@ a {
 		text-decoration: none;
 }
 a:hover {
-		color: #3366CC;
+/*		color: #3366CC;*/
 		/*opacity: 0.93;  -webkit-transition: 0.13s linear; -moz-transition: 0.13s linear; */
 		 opacity: 0.5;  -webkit-transition: 0.09s linear; -moz-transition: 0.09s linear;
 }
