--- a/_includes/head_new.html
+++ b/_includes/head_new.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>  
-	<link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,300italic,400italic' rel='stylesheet' type='text/css'>
+	<!--<link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,300italic,400italic' rel='stylesheet' type='text/css'>-->
+	<link href='http://fonts.googleapis.com/css?family=Ubuntu:regular,italic,bold&v1' rel='stylesheet' type='text/css'>
 	<meta name="viewport" content="initial-scale=1.0, width=device-width"/>
 	<meta charset="utf-8"/>
 	<title>{{ page.title }} | {{ site.title }}</title>
