--- a/_layouts/default_new.html
+++ b/_layouts/default_new.html
@@ -5,12 +5,12 @@
 <div id="header">
 		<h1><a title="Home" href="/">blog.&#8203;timmschoof.com</a></h1>
 </div> 
-<div id="navigation"
+<!--<div id="navigation"
 <ul>
 			<li><a href="http://timmschoof.com">Personal Page</a></li>
 			<li><a href="http://feeds.feedburner.com/timmschoof">Subscribe</a></li>
 </ul>
-</div>
+</div> -->
 <div id="wrapper">
 	
 	<div id="content-wrapper">
