--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -128,7 +128,7 @@ video {
 		height: auto;
 }
 div#header { 
-		margin: 2em auto -3.3em auto;
+		margin: 2em auto 0 auto;
 		text-align: center;
 		max-width: 100%;
 		padding: 1.0em 0.8em;
