--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -202,7 +202,7 @@ p.pic {
 		font-size: 0.8em;
 }
 .post-content {
-		margin-bottom: 3em;
+		margin-bottom: 5em;
 }
 
 .videoWrapper-16-9 {
@@ -302,8 +302,8 @@ div#footer a:hover {
 @media only screen and (max-width: 31.25em) { /* 500px */
 		body { font-size:93%;word-wrap: break-word;}
 		div#header { 
-		margin: 1em auto;
-		padding: 0.5em 0.4em; 
+/*		margin: 1em auto;
+		padding: 0.5em 0.4em;  */
 }
 		div#header h1 {
 		font-size: 2.0em;
