--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -296,7 +296,9 @@ div#footer a:hover {
 @media only screen and (max-width: 50em) { /* 800px */
 		body { font-size:100%;}
 		div#navigation li {
-		padding:0 3%;
+		padding:0 3%; }
+		div#header { 
+		margin-bottom: 5em;
 }
 }
 @media only screen and (max-width: 31.25em) { /* 500px */
@@ -317,4 +319,7 @@ div#footer a:hover {
 
 @media only screen and (min-width: 68.75em) { /* 1100px */
 		body { font-size:111%;} 
+		div#header { 
+		margin-bottom: 5em;
+}
 }   
