--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -309,8 +309,8 @@ div#footer a:hover {
 }
 		div#header h1 {
 		font-size: 2.0em;
-		line-height:1.0em;
-		margin: 0.5em 0;
+/*		line-height:1.0em;
+		margin: 0.5em 0; /*
 }
 		/* div#navigation ul, div#navigation a {
 		font-size: 1.0em;
