--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -276,7 +276,7 @@ div#footer {
    		max-width:100%;
    		height:100%;
    		text-align: center;
-   		background-color: #DDDDDD; 
+   		background-color: #A4A4A4; 
    		border-top: 0.2em solid #FF6600;
 }
 div#footer p {
