--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -298,6 +298,7 @@ div#footer ul {
 }
 div#footer li{
 	display:inline-block;
+	padding: 0 2em;
 } 
 
 @media only screen and (max-width: 50em) { /* 800px */
