--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -270,20 +270,20 @@ p.pic {
 }
 div#footer {
 		position:relative;
-		margin: 6em 0 0 0;
+		margin: 0 0 0 0;
 		padding: 0 1em 1.1em 1em;
    		bottom:0;
    		max-width:100%;
    		height:100%;
    		text-align: center;
    		background-color: #BDBDBD; 
-   		border-top: 0.2em solid #FF6600;
+/*   		border-top: 0.2em solid #FF6600; */
 }
 div#footer p {
 		font-size: 0.9em;
 		line-height: 1.5em;
 		margin: 0;
-		padding: 1.1em 0 0 0;
+		padding: 0 0 0 0;
 }
 div#footer a {
 		color: black;
@@ -294,12 +294,10 @@ div#footer a:hover {
 }
 div#footer ul {
 		list-style:none;
-		padding: 1.1em 0 0 0;
 		background-color: #FF6600;
 }
 div#footer li{
 	display:inline-block;
-	padding: 0 2em;
 } 
 
 @media only screen and (max-width: 50em) { /* 800px */
