--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -295,7 +295,7 @@ div#footer a:hover {
 div#footer ul {
 		list-style:none;
 		margin: 0;
-		width: 100%;
+		width: inherit;
 		max-width: 100%;
 		background-color: #FF6600;
 }
