--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -271,7 +271,7 @@ p.pic {
 div#footer {
 		position:relative;
 		margin: 0 0 0 0;
-		padding: 0 1em 1.1em 1em;
+		padding: 0;
    		bottom:0;
    		max-width:100%;
    		height:100%;
@@ -283,7 +283,7 @@ div#footer p {
 		font-size: 0.9em;
 		line-height: 1.5em;
 		margin: 0;
-		padding: 0 0 0 0;
+		padding: 1.5em;
 }
 div#footer a {
 		color: black;
