--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,10 @@
 <div id="footer">
 		
 		<ul>
-			<li>Personal Page</li>
-			<li>Archives</li>
-			<li>Subscribe</li>
-			<li>Search</li>
+			<li><a href="http://timmschoof.com/index_new.html">About</a></li>
+			<li><a href="http://blog.timmschoof.com/archives/">Archives</a></li>
+			<li><a href="http://blog.timmschoof.com/search/">Search</a></li>
+			<li><a href="http://feeds.feedburner.com/timmschoof">Subscribe</a></li>
 		</ul>
 		
 		<p>This blog's content is licensed under CC By Sa, 
