--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -107,7 +107,7 @@ small {
 }
 hr { 	
 		width: 70%;
-		color: #FF6600;
+		color: black;
 		height: 1em;
 		background-color: #FAFAFA;
 		border: 1px solid black;
