--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -107,10 +107,12 @@ small {
 }
 hr { 	
 		width: 70%;
-		color: #FAFAFA;
-		height: 1em;
 		background-color: #FAFAFA;
-		border-bottom: 1em solid #FF6600;
+  border-color: #FAFAFA;
+  border-style: solid;
+  border-width: 0.3em 0 0;
+  clear: both;
+  height: 0;
 }
 ol {
 		list-style-type: decimal;
