--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -108,7 +108,7 @@ small {
 hr { 	
 		width: 70%;
 		background-color: #FAFAFA;
-  border-color: #FAFAFA;
+  border-color: #FF6600;
   border-style: solid;
   border-width: 0.3em 0 0;
   clear: both;
