--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -106,11 +106,11 @@ small {
 		font-size: 0.8em;
 }
 hr { 	
-		width: 60%;
+		margin: 0 22%;
 		background-color: #FAFAFA;
   border-color: #FF6600;
   border-style: solid;
-  border-width: 0.2em 0 0;
+  border-width: 0.17em 0 0;
   clear: both;
   height: 0;
 }
