--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -309,7 +309,7 @@ div#footer ul {
 		background-color: #FAFAFA;
 }
 div#footer li{
-/*	display:inline-block; */
+	display:inline-block;
 	padding: 1em 2em;
 } 
 
