--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -285,7 +285,7 @@ div#footer {
    		max-width:100%;
    		height:100%;
    		text-align: center;
-   		background-color: #BDBDBD; 
+/*   		background-color: #BDBDBD; /*
 /*   		border-top: 0.2em solid #FF6600; */
 }
 div#footer p {
