--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -292,7 +292,7 @@ div#footer p {
 		font-size: 0.9em;
 		line-height: 1.5em;
 		margin: 0;
-		padding: 1.3em;
+		padding: 0.5em 1.3em 1.3em 1.3em;
 }
 div#footer a {
 		color: #FF6600;
@@ -303,7 +303,7 @@ div#footer a:hover {
 div#footer ul {
 		list-style:none; 
 		margin: 0;
-		padding: 2em 15%;
+		padding: 2em 15% 1em 15%;
 		width: inherit;
 		max-width: 100%;
 		background-color: #FAFAFA;
