--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -106,7 +106,7 @@ small {
 		font-size: 0.8em;
 }
 hr { 	
-		margin: 0 17%;
+		margin: 2em 17% 0 17%;
 		background-color: #FAFAFA;
   		border-color: #FF6600;
 		border-style: solid;
