--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -137,7 +137,7 @@ video {
 		height: auto;
 }
 div#header { 
-		margin: 2em auto 2em; auto;
+		margin: 2em auto 3em auto;
 		text-align: center;
 		max-width: 100%;
 		padding: 1.0em 0.8em;
@@ -318,17 +318,17 @@ div#footer li{
 		body { font-size:100%;}
 		
 		div#header { 
-		margin-bottom: 5em;
+/*		margin-bottom: ; */
 }
 }
 @media only screen and (max-width: 31.25em) { /* 500px */
-		body { font-size:93%;word-wrap: break-word;}
+		body { font-size:90%;word-wrap: break-word;}
 		div#header h1 {
 		font-size: 2.0em;
 }
 }	       
 @media only screen and (min-width: 68.75em) { /* 1100px */
-		body { font-size:111%;} 
-		div#header { 
-		margin-bottom: 5em;}
+		body { font-size:112%;} 
+/*		div#header { 
+		margin-bottom: 5em;} */
 }   
