--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -322,8 +322,9 @@ div#footer li{
 		body { font-size:90%;word-wrap: break-word;}
 		div#header h1 {
 		font-size: 2.0em;
-		margin-bottom: 3em; 
 }
+		div#header {
+				margin-bottom: 3em; }
 }	       
 @media only screen and (min-width: 68.75em) { /* 1100px */
 		body { font-size:112%;} 
