--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -325,6 +325,9 @@ div#footer li{
 }
 		div#header {
 				margin-bottom: 3em; }
+		.post-content {
+		margin-bottom: 5em;
+}
 }	       
 @media only screen and (min-width: 68.75em) { /* 1100px */
 		body { font-size:112%;} 
