--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,7 +13,7 @@
     <input type="hidden" name="k8" value="#FAFAFA"/>
     <input type="hidden" name="k9" value="#FF6600"/>
     <input type="hidden" name="kt" value="Ubuntu"/>
-    <input type="text" name="q" maxlength="255" placeholder="Searchme!"/>
+    <input type="text" name="q" maxlength="255" placeholder="looking for something?"/>
     <input type="submit" value="DuckDuckGo Search" style="visibility: hidden;" />
 </form>
 		</span>
