--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
 		
 		<form method="get" id="search" action="http://duckduckgo.com/">
     <input type="hidden" name="sites" value="blog.timmschoof.com"/>
-    <input type="hidden" name="k8" value="#FAFAFA"/>
+    <input type="hidden" name="k8" value="Black"/>
     <input type="hidden" name="k9" value="#FF6600"/>
 <!--    <input type="hidden" name="kt" value="Ubuntu"/> -->
     <input type="text" name="q" maxlength="255" placeholder="Search"/>
