--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -315,7 +315,8 @@ div#footer li{
 } 
 
 #search input {
-		width: 66%;
+		width: 40%;
+		max-width: 10em;
 		font-family: 'Ubuntu', sans-serif;
 }
 
