--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -315,8 +315,7 @@ div#footer li{
 } 
 
 #search input {
-		width: 100%;
-		padding: 0 20%;
+		margin: 0 20%;
 		font-family: 'Ubuntu', sans-serif;
 }
 
