--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,8 +11,8 @@
     <input type="hidden" name="sites" value="blog.timmschoof.com"/>
     <input type="hidden" name="k8" value="Black"/>
     <input type="hidden" name="k9" value="#FF6600"/>
-<!--    <input type="hidden" name="kt" value="Ubuntu"/> -->
-    <input type="text" name="q" maxlength="255" placeholder="Search"/>
+    <input type="hidden" name="kt" value="Ubuntu"/>
+    <input type="text" name="q" maxlength="255" placeholder="Search and hit Return"/>
     <input type="submit" value="DuckDuckGo Search" style="visibility: hidden;" />
 </form>
 		
