--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -315,11 +315,11 @@ div#footer li{
 } 
 
 #search {
-		margin: 0 20%;
+
 }
 
 #search input {
-		
+		width: 30%;
 		font-family: 'Ubuntu', sans-serif;
 }
 
