--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -314,15 +314,14 @@ div#footer li{
 	padding: 1em 1em;
 } 
 
-#search {
-
+#searchcontainer {
+		margin: 0 auto;
 }
 
 #search input {
 		width: 40%;
 		font-family: 'Ubuntu', sans-serif;
 		height: 1.5em;
-		margin: 0 auto;
 }
 
 @media only screen and (max-width: 50em) { /* 800px */
