--- a/stylesheets/style_new.css
+++ b/stylesheets/style_new.css
@@ -322,6 +322,7 @@ div#footer li{
 		width: 40%;
 		font-family: 'Ubuntu', sans-serif;
 		height: 1.5em;
+		display:block-inline;
 }
 
 @media only screen and (max-width: 50em) { /* 800px */
